; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/xen/extr_cpu_hotplug.c_enable_hotplug_cpu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/xen/extr_cpu_hotplug.c_enable_hotplug_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @enable_hotplug_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_hotplug_cpu(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @cpu_present(i32 %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @arch_register_cpu(i32 %7)
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @set_cpu_present(i32 %10, i32 1)
  ret void
}

declare dso_local i32 @cpu_present(i32) #1

declare dso_local i32 @arch_register_cpu(i32) #1

declare dso_local i32 @set_cpu_present(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
